[project]
name = "dev-tools"
description = "Developer tool support"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  # git hooks and repository checks
  "prek==0.3.1",
  # validates github actions
  "zizmor==1.22.0",
  # validates github actions
  "actionlint-py==1.7.10.24",
  # validates bash
  "shellcheck-py==0.11.0.1",
  # validates markdown
  "rumdl==0.1.7",
  # validates python
  "ruff==0.14.14",
  # validates various
  "ast-grep-cli==0.40.5",
]
