[project]
name = "dev-tools"
description = "Developer tool support"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  # git hooks and repository checks
  "prek==0.4.3",
  # validates github actions
  "zizmor==1.25.2",
  # validates github actions
  "actionlint-py==1.7.12.24",
  # validates bash
  "shellcheck-py==0.11.0.1",
  # validates markdown
  "rumdl==0.2.5",
  # validates python
  "ruff==0.15.15",
  # validates various
  "ast-grep-cli==0.42.3",
]

[tool.uv]
required-version = ">=0.9.27"
